<resources>
    <string name="app_name">ChatSecure</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="verify">Verify</string>
    <string name="select_language">Select Language</string>
    <string name="save">Save</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save_password">Save Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="Description">Enter the verification code sent to your email to log in to your account</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_email">Change Email</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
</resources>